Fix chat speech balloon alignment (css)

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -297,6 +297,7 @@ hr.stacked-divider {
     background:#0B93F6;
     border-radius:25px;
     float: right;
+    margin-left: 15px;
       
     &:before {
       content:"";
@@ -333,6 +334,7 @@ hr.stacked-divider {
     color: black;
     float: left;
     left: 12px;
+    margin-right: 15px;
       
     &:before {
       content:"";
